all comments have been accepted and appropriate corrections have been made returned the Candidate class to its original state (only added toString) removed predicates fixed CandidateValidator class, removed unnecessary methods, added method isValidByResidenceInUkraine simplified logic in StreamPractice class